# cachesubsystem

./: .cproject  .project  CMakeLists.txt  cpu.c  cpu.h  input.txt  l1-controller.c  l1-controller.h  l1-data-cache.c  l1-instruction-cache.c  l1-write-buffer.c  l2-controller.c  l2-write-buffer.c  l2_controller.h  main.c  memory.c  memory.h  queue.c  queue.h  victim-cache.c
